@@ -1,0 +1,8 @@
+/*
+ * $Id$
+ *
+ * Copyright 2009 Object Computing, Inc.
+ *
+ * Distributed under the OpenDDS License.
+ * See http://www.opendds.org/license.html
+ */
