@@ -1,3 +1,9 @@
+Fri Sep  4 20:03:59 UTC 2009  Steven Stallion  <stallions@ociweb.com>
+
+        * tools/copyright:
+
+          Added new scripts for managing project copyrights.
+
 Fri Sep  4 18:59:47 UTC 2009  Steven Stallion  <stallions@ociweb.com>
 
         * tools:
